# rubiks

./: .gitignore  LICENSE  README.md  rubiks.cabal  stack.yaml
demos/: pastels.txt
resources/: buttons.xcf
src/: Controller.hs  Main.hs  Model.hs  Resources.hs  Types.hs  View.hs
src/Model/: Cube.hs  Geometry.hs  Graphics.hs  Resources.hs  Types.hs
