name:                  rubiks
version:               0.1.0.0
homepage:              https://github.com/githubuser/rubiks#readme
license:               BSD3
license-file:          LICENSE
author:                Mark W. Ruszczycky
maintainer:            mwruszczycky@gmail.com
copyright:             2018 Mark W. Ruszczycky
category:              Game
build-type:            Simple
cabal-version:         >=1.10
extra-source-files:    README.md

executable             rubiks
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , bmp
                     , mtl
  other-modules:       Controller
                     , Model.Cube
                     , Model.Geometry
                     , Model.Graphics
                     , Model.Resources
                     , Model.Types
                     , Paths_rubiks
                     , View
